# types-PySide

./: .gitignore  README.md  VERSION  build.sh  genstubs.sh  mypy.ini  mypyrun.ini  pyproject.toml  pyside_stubgen.py
PySide2-stubs/: Qt3DAnimation.pyi  Qt3DCore.pyi  Qt3DExtras.pyi  Qt3DRender.pyi  QtCharts.pyi  QtConcurrent.pyi  QtCore.pyi  QtDataVisualization.pyi  QtGui.pyi  QtHelp.pyi  QtLocation.pyi  QtMultimedia.pyi  QtNetwork.pyi  QtOpenGL.pyi  QtPositioning.pyi  QtPrintSupport.pyi  QtQml.pyi  QtQuick.pyi  QtQuickWidgets.pyi  QtRemoteObjects.pyi  QtScript.pyi  QtScxml.pyi  QtSql.pyi  QtSvg.pyi  QtTextToSpeech.pyi  QtWebEngineCore.pyi  QtWebEngineWidgets.pyi  QtWidgets.pyi  QtXml.pyi  QtXmlPatterns.pyi  __init__.pyi
PySide2-stubs/support/: generate_pyi.pyi
stubs/PySide2/: Qt3DAnimation.pyi  Qt3DCore.pyi  Qt3DExtras.pyi  Qt3DInput.pyi  Qt3DLogic.pyi  Qt3DRender.pyi  QtCharts.pyi  QtConcurrent.pyi  QtCore.pyi  QtDataVisualization.pyi  QtGui.pyi  QtHelp.pyi  QtLocation.pyi  QtMacExtras.pyi  QtMultimedia.pyi  QtMultimediaWidgets.pyi  QtNetwork.pyi  QtOpenGL.pyi  QtOpenGLFunctions.pyi  QtPositioning.pyi  QtPrintSupport.pyi  QtQml.pyi  QtQuick.pyi  QtQuickControls2.pyi  QtQuickWidgets.pyi  QtRemoteObjects.pyi  QtScript.pyi  QtScriptTools.pyi  QtScxml.pyi  QtSensors.pyi  QtSerialPort.pyi  QtSql.pyi  QtSvg.pyi  QtTest.pyi  QtTextToSpeech.pyi  QtUiTools.pyi  QtWebChannel.pyi  QtWebEngineCore.pyi  QtWebEngineWidgets.pyi  QtWebSockets.pyi  (+3 more)
stubs/shiboken2/: shiboken2.pyi
tests/: conftest.py  qaction.py  qapplication.py  qbytearray.py  qcoreapplication.py  qdialog.py  qdialogbuttonbox.py  qflag.py  qguiapplication.py  qicon.py  qlabel.py  qlineedit.py  qmenu.py  qmessagebox.py  qobject.py  qpainter.py  qpixmap.py  qpolyon.py  qprocess.py  qprogressdialog.py  qquickitem.py  qsize.py  qsplitter.py  qtimer.py  qtreewidget.py  qtreewidgetitem.py  qversion.py  qwidget.py  qwindow.py  signal_slot.py  slot.py  test_examples_here.py  test_general.py  test_optional_key.py  test_slot.py
