[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "types-PySide2"
readme = "README.md"
authors = [
    {name = "Chad Dombrova"}
]
description = "The most accurate stubs for PySide2"
license = {text = "LGPL v2.1"}

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/chadrik/types-pyside"
"Bug Tracker" = "https://github.com/chadrik/types-pyside/issues"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["*-stubs"]
exclude = [
    "tests*",
    "pyside_stubgen.py",
    "genstubs.sh",
    "VERSION",
]
